# examina-core

./: .gitignore  BILINGUAL_DEDUPLICATION.md  CHANGELOG.md  CLAUDE.md  LANGUAGE_DETECTION.md  PHASE10_TESTING.md  PHASE_9.1_CODE_CHANGES.md  PHASE_9.1_REPORT.md  PHASE_9_2_IMPLEMENTATION_REPORT.md  PHASE_9_5_EXECUTIVE_SUMMARY.md  PHASE_9_5_REPORT.md  PHASE_9_REPORT.md  PRIVACY.md  RATE_LIMITING_IMPLEMENTATION.md  README.md  TODO.md  cli.py  config.py  debug_analyzer.py  inspect_db.py  inspect_theory_detail.py  inspect_theory_questions.py  pyproject.toml  requirements.txt  run_phase9_5_tests.sh  test_exercise_type_detection.py  test_full_pipeline.py  test_phase9_2_theory_categorization.py  test_phase9_5_detailed_analysis.py  test_phase9_5_multi_course.py  test_proof_detection.py
.claude/: TODOCORE.md  rules.md
config/: __init__.py
core/: __init__.py  active_learning.py  analyzer.py  answer_evaluator.py  exercise_scanner.py  exercise_splitter.py  features.py  fsrs_scheduler.py  llm_exercise_splitter.py  merger.py  note_splitter.py  pdf_processor.py  post_processor.py  procedure_cache.py  progress_analyzer.py  proof_tutor.py  quiz.py  quiz_engine.py  rate_limiter.py  review_engine.py  semantic_matcher.py  service.py  smart_splitter.py  solution_matcher.py  solution_separator.py  study_strategies.py  transitive.py  translation_detector.py  tutor.py
docs/: ADDING_NEW_PROVIDER.md  CHANGELOG.md  CONCEPT_GRAPH.md  CONCEPT_GRAPH_EXAMPLES.md  CONCEPT_GRAPH_IMPLEMENTATION.md  LEARNING_FLOW_DIAGRAM.txt  PHASE2_PLAN.md  PRIVACY.md  RATE_LIMITING.md  README.md  SOLUTION_SEPARATOR_TEST_RESULTS.md  service-interface.md  sub-question-detection.md
models/: __init__.py  llm_manager.py
scripts/: README.md  debug_analyzer.py  golden-tests.yaml  test_confidence_filter.py  test_confidence_filter_low_threshold.py  test_generic_rate_limiting.py  test_language_detection.py  test_pipeline.py  (+1 more)
(+29 files in other folders)
