[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "examina-core"
version = "0.16.0"
description = "AI-powered exam preparation system - core library"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "madebymlai"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["education", "exam", "ai", "tutor", "spaced-repetition"]

dependencies = [
    "anthropic>=0.18.0",
    "groq>=0.4.0",
    "openai>=1.12.0",
    "httpx>=0.25.0",
    "pyyaml>=6.0",
    "pdfplumber>=0.10.0",
    "pymupdf>=1.23.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    # Active learning / ML dependencies
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "sentence-transformers>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
ollama = [
    "ollama>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/madebymlai/examina"
Repository = "https://github.com/madebymlai/examina"
Issues = "https://github.com/madebymlai/examina/issues"

[project.scripts]
examina = "cli:cli"

[tool.setuptools.packages.find]
include = ["core*", "models*", "storage*", "utils*", "config*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
ignore = ["E501"]
